# neo-zed

./: .gitignore  Cargo.toml  README.md
.superpowers/brainstorm/30253-1774384117/: .server-stopped  conditional-branch-builder.html  conditional-globals-overview.html  conditional-json-ast-builder.html  conditional-operator-dropdown.html  conditional-simple-builder.html
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/keymaps/linux/: cursor.json
assets/keymaps/macos/: cursor.json
crates/agent_ui/src/: agent_ui.rs  agent_workspace_item.rs  agent_workspace_surface.rs  ai_workspace.rs  completion_provider.rs  config_options.rs  conversation_view.rs  inline_assistant.rs  inline_prompt_editor.rs  message_editor.rs  mode_selector.rs  model_selector.rs  profile_selector.rs  test_support.rs  text_thread_editor.rs  thread_history_view.rs  threads_archive_view.rs
crates/ai_onboarding/src/: ai_onboarding.rs  ai_workspace_onboarding_card.rs  ai_workspace_onboarding_content.rs  plan_definitions.rs
crates/auto_update/src/: auto_update.rs
crates/auto_update_helper/src/: dialog.rs
crates/cli/src/: main.rs
crates/cloud_api_types/src/: extension.rs
crates/collab/migrations/: 20251208000000_test_schema.sql
crates/collab_ui/src/: collab_panel.rs  notification_panel.rs
crates/command_palette/src/: command_palette.rs
crates/command_palette_hooks/src/: command_palette_hooks.rs
crates/context_server/src/: context_server.rs  oauth.rs
crates/copilot_chat/src/: copilot_chat.rs
crates/debugger_ui/src/: debugger_panel.rs
crates/edit_prediction/src/: zed_edit_prediction_delegate.rs
crates/editor/src/: context_menu_hooks.rs  editor.rs  mouse_context_menu.rs
crates/eval/src/: eval.rs
crates/eval_cli/src/: headless.rs
crates/extension/src/: extension.rs  extension_host_proxy.rs  extension_manifest.rs  types.rs
crates/extension_api/: README.md
crates/extension_api/src/: extension_api.rs  sidecar.rs
crates/extension_cli/src/: main.rs
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: capability_granter.rs  extension_host.rs  extension_store_test.rs  wasm_host.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/feature_flags/src/: feature_flags.rs  flags.rs
crates/fs/src/: fs_watcher.rs
crates/git/src/: repository.rs
crates/git_ui/src/: git_panel.rs  project_diff.rs
crates/icons/src/: icons.rs
crates/install_cli/src/: install_cli_binary.rs
crates/language_model/src/: language_model.rs
crates/node_runtime/src/: node_runtime.rs
crates/onboarding/src/: basics_page.rs
crates/open_router/src/: open_router.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: orchestration.rs
crates/orchestration_ui/: Cargo.toml
crates/orchestration_ui/src/: orchestration_ui.rs
crates/outline_panel/src/: outline_panel.rs
crates/paths/src/: paths.rs
crates/platform_title_bar/src/: platform_title_bar.rs
crates/project_panel/src/: context_menu_hooks.rs  project_panel.rs
crates/release_channel/src/: lib.rs
crates/remote_server/src/: server.rs
crates/rules_library/src/: rules_library.rs
crates/settings_content/src/: agent.rs  language.rs  theme.rs
crates/settings_ui/src/: page_data.rs  settings_ui.rs
crates/sidebar/: Cargo.toml
crates/sidebar/src/: sidebar.rs
crates/system_specs/src/: system_specs.rs
crates/terminal_view/src/: terminal_panel.rs
crates/theme/src/: fallback_themes.rs  settings.rs
crates/title_bar/src/: title_bar.rs
crates/util/src/: shell.rs
crates/workflow_ui/: Cargo.toml  canvas.rs  client.rs  inspector.rs  picker.rs  runs.rs  workflow_ui.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: context_menu_hooks.rs  dock.rs  pane.rs  persistence.rs  status_bar.rs  workspace.rs
crates/zed/: Cargo.toml  build.rs
docs/: acp-threads-in-sidebar-plan.md  agent-panel-to-ai-workspace-merge-note.md  ai-workspace-dock-sizing-merge-note.md
docs/src/: SUMMARY.md  extensions.md  linux.md  macos.md  uninstall.md
extensions/remote-ui-example/: Cargo.toml  README.md  extension.toml  sidecar.js
extensions/remote-ui-example/src/: remote_ui_example.rs
nix/: build.nix
script/: bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  cargo-timing-info.js  install.sh  run-remote-ui-example  uninstall.sh  upload-nightly.ps1
script/flatpak/: bundle-flatpak
(+58 files in other folders)
