[package]
name = "workflow_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "workflow_ui.rs"
doctest = false

[dependencies]
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
editor.workspace = true
picker.workspace = true
project.workspace = true
multi_buffer.workspace = true
theme.workspace = true
settings.workspace = true
util.workspace = true
language.workspace = true
paths.workspace = true
log.workspace = true
http_client.workspace = true
reqwest_client.workspace = true

anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
