[package]
name = "remote_ui_example"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/remote_ui_example.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = { path = "../../crates/extension_api" }
urlencoding.workspace = true
